@@ -1,5 +1,14 @@
 2008-07-13	Nick Schermer <nick@xfce.org>
 
+	* dialogs/accessibility-settings/main.c,
+	  dialogs/mouse-settings/main.c,
+	  dialogs/appearance-settings/main.c,
+	  dialogs/keyboard-settings/main.c,
+	  xfce4-settings-helper/main.c: Add same ad improved error 
+	  messages and version information.
+
+2008-07-13	Nick Schermer <nick@xfce.org>
+
 	* dialogs/keyboard-settings/main.c: Fix code. Thought I saved it,
 	  but I didn't...
 
